Use hidden divs to display correctly on mobile

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@
     margin-top: 8px;
     margin-bottom: 8px;
   }
+
+  .wp-block-book-display-book-block-right .row-flex .cover-style-right {
+    display: none;
+  }
 }
 
 /* Responsive styles for tablet-sized screens */
@@ -43,6 +47,7 @@
     margin-top: 8px;
     margin-bottom: 8px;
   }
+
 }
 
 /* For larger tablets */
@@ -86,5 +91,13 @@
   .wp-block-book-display-book-block-right .text-style {
     max-width: 50%;
     margin-right: 20px;
+  }
+
+  .wp-block-book-display-book-block-right .row-flex .cover-style-mobile {
+    display: none;
+  }
+
+  .wp-block-book-display-book-block-right .row-flex .cover-style-right {
+    display: block;
   }
 }
